<resources>
    <string name="app_name">Setara</string>
    <string name="hint_email">Type your email</string>
    <string name="hint_password">Type your password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered">Not registered yet, sign up!</string>
    <string name="welcome">Welcome Back!</string>
    <string name="register">Sign Up</string>
    <string name="splash">Splash</string>
    <string name="type_your_email">Type your email</string>
    <string name="type_your_password">Type your password</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="already_registered_sign_in">Already registered, sign in!</string>
    <string name="logout">Logout</string>

    <string name="home">Home</string>
    <string name="course">Course</string>
    <string name="about">About</string>
    <string name="recommendation">Recommend</string>
    <string name="assist">Assist</string>
    <string name="settings">Settings</string>

    <string name="notification">Notification</string>
    <string name="profile_icon">Profile</string>
    <string name="go_button">Go</string>
    <string name="title_assist">Title Assist</string>
    <string name="description_assist">Description Assist</string>
    <string name="gmail">Gmail</string>
    <string name="about_us_title">Setara</string>
    <string name="about_us">Tentang Kami</string>

    <string name="about_us_description">
    This app was created by the Setara Team.\n\n
    The purpose of this app is to help people with disabilities
    find easier and more inclusive jobs.\n\n
    We hope this app can open more opportunities and
    provide equal access for every individual, regardless of
    limitations. With this app, we hope to reduce disparities and create fairer opportunities for everyone.
</string>


    <string name="about_us_image">Gambar About Us</string>
    <string name="input_job">Input Job Recommendation</string>
    <string name="name_input">Name</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="_17_24">17-24</string>
    <string name="_25_30">25-30</string>
    <string name="_31_35">31-35</string>
    <string name="disability">Disability</string>
    <string name="daksa">Daksa</string>
    <string name="netra">Netra</string>
    <string name="rungu">Rungu</string>
    <string name="length_of_experience">Length of Experience</string>
    <string name="_0_2">0-2</string>
    <string name="_3_5">3-5</string>
    <string name="_6"><![CDATA[6]]></string>
    <string name="submit">Submit</string>
    <string name="welcome_user">Welcome, %1$s 👋</string>
    <string name="welcome_guest">Welcome, Guest 👋</string>


    <string name="profile_image">Profile Image</string>

    <string name="app_logo">App Logo</string>
    <string name="secondary_image">Secondary Image</string>
    <string name="welcome_message">Welcome to Setara, an application that provides\nequal opportunities for everyone. Here, we help you\nfind job opportunities that suit you.</string>

    <string name="retry">Reload</string>
    <string name="city">"City "</string>
    <string name="please_select_a_city">Please Select a City</string>
    <string name="character_name">Name must be more than 2 characters</string>
    <string name="welcome_setara">Welcome, Setara 👋</string>
    <string name="discover">Discover your career potential!</string>
    <string name="explore">Explore Our Best Features and\nGet Started Now</string>
    <string name="discover_new">Job Fitur Recommendation</string>
    <string name="explore_now">Explore Now</string>
    <string name="welcome_">Welcome,</string>
    <string-array name="city_array">
        <item>Jakarta</item>
        <item>Bandung</item>
        <item>Bogor</item>
        <item>Depok</item>
        <item>Bekasi</item>
        <item>Cimahi</item>
        <item>Tangerang</item>
        <item>Sukabumi</item>
        <item>Tasikmalaya</item>
        <item>Cirebon</item>
        <item>Sumedang</item>
        <item>Purwakarta</item>
        <item>Garut</item>
        <item>Ciamis</item>
    </string-array>




</resources>