<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/course"
        android:enabled="true"
        android:icon="@drawable/course"
        android:title="@string/course"/>
    <item
        android:id="@+id/recommendation"
        android:enabled="true"
        android:icon="@drawable/recommend"
        android:title="@string/recommendation"/>
    <item
        android:id="@+id/assist"
        android:enabled="true"
        android:icon="@drawable/assist"
        android:title="@string/assist"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/button_setting"
        android:title="@string/settings"/>
</menu>