<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="top|center_horizontal"
    android:background="@color/white">

    <ImageView
        android:id="@+id/aboutUsImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/about_us_image"
        android:src="@drawable/profile"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/aboutUsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/about_us_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/aboutUsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_us_description"
        android:textSize="16sp"
        tools:ignore="VisualLintLongText" />

</LinearLayout>
